fixed spacing in side bar

--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ body{
   height:90%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   margin-bottom: 1%;
 }
 
